welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: illegal start of simple pattern
	var boolean vert = Color.green
                         ^SlugTracking:8: error: '=' expected but ';' found.
	backward()
^